# npeff_ref

./: .gitignore  README.md  requirements.txt  setup.py
cc/cuda_d_npeff/: CMakeLists.txt
cc/cuda_d_npeff/mains/: CMakeLists.txt  fit_coeffs_to_sparse_H.cu  run_nmf_on_pefs.cu
cc/cuda_d_npeff/src/: CMakeLists.txt
cc/cuda_d_npeff/src/cuda/: cuda_context.h  cuda_statuses.h  cuda_system.h  cuda_types.h  descr.h  transfers.h
cc/cuda_d_npeff/src/cuda/debugging/: debugging.h  matrix_checks.h
cc/cuda_d_npeff/src/cuda/device/: dense_matrix.h  sparse_matrix.h
cc/cuda_d_npeff/src/cuda/host/: dense_matrix.h  sparse_matrix.h
cc/cuda_d_npeff/src/cuda/ops/: frobenius_product.h  matmul.h  matrix_conversion.h  nccl_ops.h  random.h  sp_slicing.h  spsp_matmul.h  sum.h  transpose.h
cc/cuda_d_npeff/src/cuda/transfers/: pair.h
cc/cuda_d_npeff/src/interfaces/: matrix.h
cc/cuda_d_npeff/src/io/: nmf_decomp_h5.h  pef_fisher_h5.h
cc/cuda_d_npeff/src/misc/: common.h  general.h  macros.h
cc/cuda_d_npeff/src/nmf/: multi_dense_mu_device_context.h  multi_dense_mu_nmf1.h  single_dense_mu_nmf1.h
cc/cuda_d_npeff/src/nmf/kernels/: mu.h
cc/cuda_d_npeff/src/nmf/sparse/: dense_factor_sparsity_constraints.h  device_matrix_util.h  kernels.h  multi_mu_dense_factors_device_contexts1.h  multi_mu_dense_factors_nmf1.h  single_mu_dense_factors_nmf1.h  single_mu_dense_factors_nmf2.h  sparsity_constraint_kernels.h
cc/cuda_d_npeff/src/nmf/sparse2/: nmf_sparse_H.h  only_W_learner.h  only_W_learner_device.h  only_W_learner_params.h
cc/cuda_d_npeff/src/util/: cuda_statuses.h  cuda_system.h  flag_util.h  h5_util.h  matrices.h  matrix_util.h  misc_util.h  sparse_util.h
cc/cuda_lrm_npeff/: CMakeLists.txt
cc/cuda_lrm_npeff/mains/: CMakeLists.txt  fit_lvrm_coeffs.cu  fit_m_npeff_coeffs.cu  run_lvrm_npeff.cu  run_m_npeff.cu  run_m_npeff_expansion.cu  run_stiefel_m_npeff.cu
cc/cuda_lrm_npeff/src/: CMakeLists.txt
cc/cuda_lrm_npeff/src/coeff_fitting/: config.cc  config.h  fitting_context.h  host_context.cc  host_context.h
cc/cuda_lrm_npeff/src/containers/: CMakeLists.txt  conversions.h  conversions_test.cc  dense_matrix.h  dense_matrix_test.cc  sparse_matrix.h  sparse_matrix_test.cc
cc/cuda_lrm_npeff/src/expansion/: config.h  device_worker.h  io_util.h  manager.h
cc/cuda_lrm_npeff/src/factorization/: compute_tr_xx.h  config.h  device_worker.h  dummy.cc  initialization.h  manager.h
cc/cuda_lrm_npeff/src/factorizations/lvrm_coeff_fitting/: config.cc  config.h  fitting_context.h  host_context.cc  host_context.h
cc/cuda_lrm_npeff/src/factorizations/lvrm_factorization/: compute_tr_xx.h  config.h  device_worker.h  io_util.h  manager.h
cc/cuda_lrm_npeff/src/factorizations/stiefel/: config.h  device_worker.h  io_util.h  manager.h
cc/cuda_lrm_npeff/src/factorizations/util/: shape_util.h
cc/cuda_lrm_npeff/src/gpu/: gpu_info.h  macros.h  types.h
cc/cuda_lrm_npeff/src/gpu/containers/: dense_matrix.cc  dense_matrix.h  sparse_matrix.h  transfers.h
cc/cuda_lrm_npeff/src/gpu/contexts/: device_context.cc  device_context.h
cc/cuda_lrm_npeff/src/gpu/ops/: copy_submatrices.h  dndn_matmul.h  frobenius_product.h  matmul_util.h  ops.h  orthonormalize.h  scalar_multiply.h  solve_linear_system.h  spdn_matmul.h  transpose.h
cc/cuda_lrm_npeff/src/gpu/ops/custom/: ag_to_numerator.h  compute_w_ag.h  elwise_square.h  gradient_descent.h  hadamard_product.h  multiplicative_update.h  multiply_and_add_identity.h
cc/cuda_lrm_npeff/src/gpu/ops/debugging/: numerical_checks.h
cc/cuda_lrm_npeff/src/inputs/: lrm_npeff_decomposition.cc  lrm_npeff_decomposition.h  lrm_pefs.cc  lrm_pefs.h  lvrm_pefs.cc  lvrm_pefs.h
cc/cuda_lrm_npeff/src/outputs/: lrm_npeff_decomposition.cc  lrm_npeff_decomposition.h
cc/cuda_lrm_npeff/src/preprocess/: CMakeLists.txt  column_pruning.h  column_pruning_test.cc  construct_csr_matrix.cc  construct_csr_matrix.h  construct_csr_matrix_from_lvrm_pefs.h  construct_csr_matrix_test.cc  partition_by_columns.h  pef_normalization.h  sort_by_col_indices.h
cc/cuda_lrm_npeff/src/util/: CMakeLists.txt  array_util.h  array_util_test.cc  h5_util.cc  h5_util.h  macros.h  thread_util.h
npeff/datasets/: common_processing.py  glue.py  imagenet.py  npeff_datasets.py  snli.py
npeff/decomp/: decomps.py
npeff/fishers/: d_dsf_computer.py  d_pefs_computer.py  dsfs.py  lrm_pefs_computer.py  lvrm_pefs_computer.py  pefs.py
npeff/models/: npeff_models.py  resnet.py
npeff/perturbations/: d_perturbations.py  evaluation.py  lrm_perturbations.py
npeff/util/: color_util.py  flat_pack.py  hdf5_util.py
npeff/viewers/: collage_generator.py  latex_generator.py  latex_util.py
scripts/: compute_d_dsf.py  compute_pefs.py  filter_pefs.py  make_top_examples_collages.py  make_top_examples_latex.py  perturb_d_npeff_components.py  perturb_lrm_components.py  perturb_lrm_npeff_components.py  sparsify_d_npeff.py
